...
                setImagePath(uri.toString())
            }
        )
    }
}

const val TAG_PALACE_INPUT_FIELD = "palaceInputField"


